--- a/Pipfile
+++ b/Pipfile
@@ -24,6 +24,7 @@ dj-rest-auth = {extras = ["with_social"], version = "*"}
 django-allauth = "*"
 djangorestframework = "*"
 djangorestframework-simplejwt = "*"
+django-health-check = "*"
 
 [requires]
 python_version = "3.8"
