--- a/Pipfile
+++ b/Pipfile
@@ -27,6 +27,8 @@ djangorestframework-simplejwt = "*"
 django-health-check = "*"
 cvxpy = "*"
 cvxopt = "*"
+chardet = "*"
+drf-nested-routers = "*"
 
 [requires]
-python_version = "3.8"
+python_version = "3.11"
